--- a/package.json
+++ b/package.json
@@ -16,19 +16,26 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.46.0",
+		"@skeletonlabs/skeleton": "^2.10.2",
+		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"@sveltejs/adapter-auto": "^3.2.2",
 		"@sveltejs/adapter-node": "^5.2.0",
 		"@sveltejs/kit": "^2.5.20",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@tailwindcss/typography": "^0.5.14",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^20.14.14",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^9.8.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.43.0",
 		"globals": "^15.9.0",
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.2.6",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.5",
+		"tailwindcss": "^3.4.9",
 		"typescript": "^5.5.4",
 		"typescript-eslint": "^8.0.1",
 		"vite": "^5.4.0",
